--- a/index.html
+++ b/index.html
@@ -27,79 +27,82 @@
         </nav>
     </header>
 
-    <section id="banner" class="bg-black">
-        <h2>PASSION. PROFESSIONNALISME. PERFORMANCE.</h2>
-        <a href="">GAMING CAMPUS EN VIDEO ></a>
-    </section>
-<!-- 
-    <section id="banner-blanche">
-        <p>Imaginé par des professionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences.</p>
+    <section id="banner" class="bg-black flex flex-col gap-3 items-center p-10">
+        <div class="w-[40%]">
+            <img class="w-full" src="assets/img/logo-gc-hero.png" alt="">
+        </div>
+        <h3 class="text-gray-500 text-sm tracking-widest">PASSION. PROFESSIONNALISME. PERFORMANCE.</h3>
+        <a class="text-gray-300 text-xs mt-3 border-white border p-2 pr-6 pl-6 mb-6" href="">GAMING CAMPUS EN VIDEO ></a>
     </section>
 
-    <section id="savoir-plus">
-        <div class="savoir-container">
-            <div class="img">
-                <img src="" alt="">
+    <section id="banner-blanche" class="flex justify-center items-center p-5">
+        <p class="w-[60%] text-center">Imaginé par des professionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique pour révéler les talents et développer les compétences.</p>
+    </section>
+
+    <section id="savoir-plus" class="bg-black text-white p-20 flex justify-center gap-5">
+        <div class="savoir-container flex items-center gap-5 flex-col text-center">
+            <div class="img w-[60%]">
+                <img class="w-full" src="assets/img/logo-gbs-home.png" alt="">
             </div>
             <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a href="">EN SAVOIR PLUS</a>
+            <a class="border-white border text-xs p-2 pr-6 pl-6" href="">EN SAVOIR PLUS</a>
         </div>
 
-        <div class="savoir-container">
-            <div class="img">
-                <img src="" alt="">
+        <div class="savoir-container flex items-center gap-5 flex-col text-center">
+            <div class="img w-[60%]">
+                <img class="w-full" src="assets/img/logo-ga-home.png" alt="">
             </div>
-            <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
+            <h3><strong>GAMING ACADEMY</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a href="">EN SAVOIR PLUS</a>
+            <a class="border-white border text-xs p-2 pr-6 pl-6 href=">EN SAVOIR PLUS</a>
         </div>
 
-        <div class="savoir-container">
-            <div class="img">
-                <img src="" alt="">
+        <div class="savoir-container flex items-center gap-5 flex-col text-center">
+            <div class="img w-[60%]">
+                <img class="w-full" src="assets/img/logo-gg-home.png" alt="">
             </div>
-            <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
+            <h3><strong>GAMING GURU</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a href="">EN SAVOIR PLUS</a>
+            <a class="border-white border text-xs p-2 pr-4 pl-4 href=">EN SAVOIR PLUS</a>
         </div>
     </section>
 
-    <section id="news">
-        <div>
+    <section id="news" class="bg-gray-50 pl-[15%] pr-[15%] pb-[10%]">
+        <div class="flex items-center justify-between mb-10 pt-16">
             <div>
-                <h2>LES NEWS DU CAMPUS</h2>
-                <p>Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
+                <h2 class="tracking-widest text-2xl">LES NEWS DU CAMPUS</h2>
+                <p class="text-xs">Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
             </div>
-            <a href="">LA NEWSROOM ></a>
+            <a class="border-black border p-2 pr-6 pl-6 text-sm font-robotob" href="">LA NEWSROOM ></a>
         </div>
 
-        <div class="news-parent">
-            <div class="news">
-                <div class="img">
-                    <img src="" alt="">
+        <div class="news-parent flex gap-20">
+            <div class="news flex flex-col gap-3">
+                <div class="img w-[100%]">
+                    <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
-                <h3>Réunion d'information 19 décembre</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
+                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
             </div>
 
-            <div class="news">
-                <div class="img">
-                    <img src="" alt="">
+            <div class="news flex flex-col gap-3">
+                <div class="img w-[100%]">
+                    <img class="w-full shadow-xl shadow-black" src="assets/img/pgw18home.jpg" alt="">
                 </div>
-                <h3>Réunion d'information 19 décembre</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
+                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
             </div>
 
-            <div class="news">
-                <div class="img">
-                    <img src="" alt="">
+            <div class="news flex flex-col gap-3">
+                <div class="img w-[100%]">
+                    <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
-                <h3>Réunion d'information 19 décembre</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
+                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
             </div>
         </div>
     </section>
@@ -180,6 +183,6 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
 </body>
 </html>
