--- a/index.html
+++ b/index.html
@@ -109,11 +109,44 @@
 
     <footer id="info">
         <div>
-            <div class="info-parent1">
-                <div class="logo"></div>
-                <div class="pratique"></div>
-                <div class="parents"></div>
-                <div class="contact"></div>
+            <div class="info-parent1 flex justify-center items-center pt-10">
+                <div class="logo">
+                    <img src="assets/img/logo-gc-footer.jpg" alt="">
+                </div>
+                <div class="pratique">
+                    <h3 class="font-robotob text-sm">INFOS PRATIQUES</h3>
+                    <ul class="list-none">
+                        <li><a class="text-xs" href="">Gaming Business School</a></li>
+                        <li><a class="text-xs" href="">Gaming Academy</a></li>
+                        <li><a class="text-xs" href="">Gaming Guru</a></li>
+                        <li><a class="text-xs" href="">Recrutement</a></li>
+                        <li><a class="text-xs" href="">Investisseurs</a></li>
+                        <li><a class="text-xs" href="">Mentions légales</a></li>
+                        <li><a class="text-xs" href="">C.G.U</a></li>
+                    </ul>
+                </div>
+                <div class="parents">
+                    <h3 class="font-robotob text-sm">PARENTS</h3>
+                    <ul class="list-none w-36">
+                        <li><a class="text-xs " href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
+                        <li><a class="text-xs" href="">En savoir plus</a></li>
+                    </ul>
+                </div>
+                <div class="contact flex flex-col ">
+                    <h3 class="font-robotob text-sm">NOUS CONTACTER</h3>
+                    <ul class="list-none">
+                        <li><a class="text-xs" href="">Tél: 00 00 00 00 00</a></li>
+                        <li><a class="text-xs" href="">cotnact@gzfmajd.fr</a></li>
+                    </ul>
+                    <div>
+                        <h3 class="font-robotob text-sm">NOUS SUIVRE</h3>
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <img src="" alt="">
+                        <p>Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
+                    </div>
+                </div>
             </div>
             <div class="info-parent2">
                 <div class="ils-parlent">
