--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
 
     <footer id="info">
         <div>
-            <div class="info-parent1 flex justify-center items-center pt-10">
+            <div class="info-parent1 flex justify-center pt-10 gap-28">
                 <div class="logo">
                     <img src="assets/img/logo-gc-footer.jpg" alt="">
                 </div>
                 <div class="pratique">
                     <h3 class="font-robotob text-sm">INFOS PRATIQUES</h3>
-                    <ul class="list-none">
+                    <ul class="list-none leading-">
                         <li><a class="text-xs" href="">Gaming Business School</a></li>
                         <li><a class="text-xs" href="">Gaming Academy</a></li>
                         <li><a class="text-xs" href="">Gaming Guru</a></li>
@@ -127,14 +127,15 @@
                 </div>
                 <div class="parents">
                     <h3 class="font-robotob text-sm">PARENTS</h3>
-                    <ul class="list-none w-36">
-                        <li><a class="text-xs " href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
-                        <li><a class="text-xs" href="">En savoir plus</a></li>
+                    <ul class="list-none w-36 leading-3">
+                        <li><a class="text-xs" href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
+                        <li class="pt-5"><a class="text-xs" href="">En savoir plus</a></li>
                     </ul>
                 </div>
-                <div class="contact flex flex-col ">
-                    <h3 class="font-robotob text-sm">NOUS CONTACTER</h3>
+                <div class="contact flex flex-col gap-5 ">
+                    
                     <ul class="list-none">
+                        <h3 class="font-robotob text-sm">NOUS CONTACTER</h3>
                         <li><a class="text-xs" href="">Tél: 00 00 00 00 00</a></li>
                         <li><a class="text-xs" href="">cotnact@gzfmajd.fr</a></li>
                     </ul>
@@ -144,39 +145,39 @@
                         <img src="" alt="">
                         <img src="" alt="">
                         <img src="" alt="">
-                        <p>Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
+                        <p class="text-xs" >Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
                     </div>
                 </div>
             </div>
-            <div class="info-parent2">
+            <div class="info-parent2 flex justify-center items-center gap-6">
                 <div class="ils-parlent">
                     <h3>ILS PARLENT DE NOUS</h3>
                     <p>Voir toutes les retombées presse.</p>
                 </div>
                 
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/figaro.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/challenges.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/leparisien.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/lemonde.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/lepoint.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/echos.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/bfm.png" alt="">
                 </div>
-                <div class="press-img">
-                    <img src="" alt="">
+                <div class="press-img w-15">
+                    <img class="w-full" src="assets/img/lepoint.png" alt="">
                 </div>
             </div>
             <div class="banner-black">
