--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     </div>
                 </div>
             </div>
-            <div class="info-parent2 flex justify-center items-center gap-6">
+            <div class="info-parent2 flex justify-center items-center gap-6 pt-10 border-t border-gray-400 mt-10">
                 <div class="ils-parlent">
-                    <h3>ILS PARLENT DE NOUS</h3>
+                    <h3 class="font-robotob">ILS PARLENT DE NOUS</h3>
                     <p>Voir toutes les retombées presse.</p>
                 </div>
                 
@@ -180,39 +180,35 @@
                     <img class="w-full" src="assets/img/lepoint.png" alt="">
                 </div>
             </div>
-            <div class="banner-black">
-                <h3>PARTENAIRES OFFICIELS</h3>
-                <div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+            <div class="banner-black bg-black p-5 mt-5">
+                <h3 class="font-robotob text-center text-white mb-3">PARTENAIRES OFFICIELS</h3>
+                <div class="flex justify-center items-center gap-3">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/apollo.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/chiliz.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/omen.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/joa.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/maxonomic.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/credit-mutuel.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/chiliz.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/omen.png" alt="">
                     </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="partenaire-img">
-                        <img src="" alt="">
-                    </div>
+                    <div class="partenaire-img w-20">
+                        <img class="w-full" src="assets/img/joa.png" alt="">
                 </div>
             </div>
         </div>
