--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body class="font-roboto">
     <header class="h-10 flex justify-end items-center">
         <nav class="flex justify-end items-center pr-[10%] gap-3">
-            <ul class="list-none flex gap-3 text-xs">
-                <li class="border-t-violet-700 border-t-4 text-violet-700"><a href="">ACCUEIL</a></li>
-                <li><a href="">BUSINESS SCHOOL</a></li>
-                <li><a href="">ECOLE ESPORT</a></li>
-                <li><a href="">COURS DE JEUX VIDEOS</a></li>
-                <li><a href="">LE CAMPUS</a></li>
-                <li><a href="">NEWSROOM</a></li>
-                <li><a href="">PARENTS</a></li>
+            <ul class="list-none flex gap-3 ">
+                <li><a class="border-t-violet-700 border-t-4 text-violet-700 hover:font-robotob hover:underline" href="">ACCUEIL</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">BUSINESS SCHOOL</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">ECOLE ESPORT</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">COURS DE JEUX VIDEOS</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">LE CAMPUS</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">NEWSROOM</a></li>
+                <li><a class="hover:font-robotob hover:underline" href="">PARENTS</a></li>
             </ul>
-            <div class="text-xs bg-gray-200 p-1 rounded-xl">
-                <a class="border-r-2 border-black pr-1" href="">FR</a>
-                <a class=" " href="">EN</a>
+            <div class=" bg-gray-200 p-1 rounded-xl">
+                <a class="hover:font-robotob hover:underline" class="border-r-2 border-black pr-1" href="">FR</a>
+                <a class="hover:font-robotob hover:underline" class=" " href="">EN</a>
             </div>
 
         </nav>
@@ -29,10 +29,10 @@
 
     <section id="banner" class="bg-black flex flex-col gap-3 items-center p-10">
         <div class="w-[40%]">
-            <img class="w-full" src="assets/img/logo-gc-hero.png" alt="">
+            <a class="hover:bg-red-500 hover:p-3" href=""><img class="w-full" src="assets/img/logo-gc-hero.png" alt=""></a>
         </div>
-        <h3 class="text-gray-500 text-sm tracking-widest">PASSION. PROFESSIONNALISME. PERFORMANCE.</h3>
-        <a class="text-gray-300 text-xs mt-3 border-white border p-2 pr-6 pl-6 mb-6" href="">GAMING CAMPUS EN VIDEO ></a>
+        <h3 class="text-gray-500 text-md tracking-widest">PASSION. PROFESSIONNALISME. PERFORMANCE.</h3>
+        <a class="text-gray-300  mt-3 border-white border p-2 pr-6 pl-6 mb-6 hover:bg-red-500 hover:p-3" href="">GAMING CAMPUS EN VIDEO ></a>
     </section>
 
     <section id="banner-blanche" class="flex justify-center items-center p-5">
@@ -46,7 +46,7 @@
             </div>
             <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="border-white border text-xs p-2 pr-6 pl-6" href="">EN SAVOIR PLUS</a>
+            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-6 pl-6 hover:bg-red-500 hover:p-3" href="">EN SAVOIR PLUS</a>
         </div>
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
@@ -55,7 +55,7 @@
             </div>
             <h3><strong>GAMING ACADEMY</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="border-white border text-xs p-2 pr-6 pl-6 href=">EN SAVOIR PLUS</a>
+            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-6 pl-6 href=">EN SAVOIR PLUS</a>
         </div>
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
@@ -64,17 +64,17 @@
             </div>
             <h3><strong>GAMING GURU</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
-            <a class="border-white border text-xs p-2 pr-4 pl-4 href=">EN SAVOIR PLUS</a>
+            <a class="hover:font-robotob hover:underline" class="border-white border  p-2 pr-4 pl-4 href=">EN SAVOIR PLUS</a>
         </div>
     </section>
 
     <section id="news" class="bg-gray-50 pl-[15%] pr-[15%] pb-[10%]">
         <div class="flex items-center justify-between mb-10 pt-16">
             <div>
-                <h2 class="tracking-widest text-2xl">LES NEWS DU CAMPUS</h2>
-                <p class="text-xs">Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
+                <h2 class="tracking-widest text-3xl">LES NEWS DU CAMPUS</h2>
+                <p class="">Suivez l'actualité de Gaming Campus, de G.Guru, G.B.S et G.Academy.</p>
             </div>
-            <a class="border-black border p-2 pr-6 pl-6 text-sm font-robotob" href="">LA NEWSROOM ></a>
+            <a class="hover:font-robotob hover:underline" class="border-black border p-2 pr-6 pl-6 text-md font-robotob" href="">LA NEWSROOM ></a>
         </div>
 
         <div class="news-parent flex gap-20">
@@ -82,27 +82,27 @@
                 <div class="img w-[100%]">
                     <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
-                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
-                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
 
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
                     <img class="w-full shadow-xl shadow-black" src="assets/img/pgw18home.jpg" alt="">
                 </div>
-                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
-                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
 
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
                     <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
-                <h3 class="font-robotob text-sm mt-3">Réunion d'information 19 décembre</h3>
-                <p class="text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
-                <a class="text-xs text-violet-800 font-robotob" href="">SUR INSCRIPTION ></a>
+                <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
+                <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
+                <a class=" text-violet-700 hover:font-robotob hover:underline" href="">SUR INSCRIPTION ></a>
             </div>
         </div>
     </section>
@@ -114,39 +114,50 @@
                     <img src="assets/img/logo-gc-footer.jpg" alt="">
                 </div>
                 <div class="pratique">
-                    <h3 class="font-robotob text-sm">INFOS PRATIQUES</h3>
+                    <h3 class="font-robotob text-md">INFOS PRATIQUES</h3>
                     <ul class="list-none leading-">
-                        <li><a class="text-xs" href="">Gaming Business School</a></li>
-                        <li><a class="text-xs" href="">Gaming Academy</a></li>
-                        <li><a class="text-xs" href="">Gaming Guru</a></li>
-                        <li><a class="text-xs" href="">Recrutement</a></li>
-                        <li><a class="text-xs" href="">Investisseurs</a></li>
-                        <li><a class="text-xs" href="">Mentions légales</a></li>
-                        <li><a class="text-xs" href="">C.G.U</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Business School</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Academy</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Gaming Guru</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Recrutement</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Investisseurs</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Mentions légales</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">C.G.U</a></li>
                     </ul>
                 </div>
                 <div class="parents">
-                    <h3 class="font-robotob text-sm">PARENTS</h3>
+                    <h3 class="font-robotob text-md">PARENTS</h3>
                     <ul class="list-none w-36 leading-3">
-                        <li><a class="text-xs" href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
-                        <li class="pt-5"><a class="text-xs" href="">En savoir plus</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Questions / réponses pour vous accompagnez dans votre réflexion sur l'orientation de votre enfant et le choix de Gaming Campus</a></li>
+                        <li class="pt-5"><a class="hover:font-robotob hover:underline" class="" href="">En savoir plus</a></li>
                     </ul>
                 </div>
                 <div class="contact flex flex-col gap-5 ">
                     
                     <ul class="list-none">
-                        <h3 class="font-robotob text-sm">NOUS CONTACTER</h3>
-                        <li><a class="text-xs" href="">Tél: 00 00 00 00 00</a></li>
-                        <li><a class="text-xs" href="">cotnact@gzfmajd.fr</a></li>
+                        <h3 class="font-robotob text-md">NOUS CONTACTER</h3>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">Tél: 00 00 00 00 00</a></li>
+                        <li><a class="hover:font-robotob hover:underline" class="" href="">cotnact@gzfmajd.fr</a></li>
+                        <h3 class="font-robotob text-md pt-3">NOUS SUIVRE</h3>
+                        <div class="flex gap-[7%]">
+                            <div class="partenaire-img w-3">
+                            <img class="w-full" src="assets/img/twitter-brands.svg" alt="">
+                        </div>
+                        <div class="partenaire-img w-3">
+                            <img class="w-full" src="assets/img/facebook-brands(1).svg" alt="">
+                        </div>
+                        <div class="partenaire-img w-3">
+                            <img class="w-full" src="assets/img/linkedin-in-brands.svg" alt="">
+                        </div>
+                        <div class="partenaire-img w-3">
+                            <img class="w-full" src="assets/img/instagram-brands.svg" alt="">
+                        </div>
+                        </div>
+                        
                     </ul>
-                    <div>
-                        <h3 class="font-robotob text-sm">NOUS SUIVRE</h3>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <p class="text-xs" >Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
-                    </div>
+
+
+                    <p class="">Copyright 2018 Gaming Campus <br> Tous droits réservés</p>
                 </div>
             </div>
             <div class="info-parent2 flex justify-center items-center gap-6 pt-10 border-t border-gray-400 mt-10">
