lien et hover logo

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <section id="banner" class="bg-black flex flex-col gap-3 items-center p-10">
         <div class="w-[40%]">
-            <a class="hover:bg-red-500 hover:p-3" href=""><img class="w-full" src="assets/img/logo-gc-hero.png" alt=""></a>
+            <a href=""><img class="w-full hover:border-b-4 hover:border-sky-500" src="assets/img/logo-gc-hero.png" alt=""></a>
         </div>
         <h3 class="text-gray-500 text-md tracking-widest">PASSION. PROFESSIONNALISME. PERFORMANCE.</h3>
-        <a class="text-gray-300  mt-3 border-white border p-2 pr-6 pl-6 mb-6 hover:bg-red-500 hover:p-3" href="">GAMING CAMPUS EN VIDEO ></a>
+        <a class="text-gray-300  mt-3 border-white border p-2 pr-6 pl-6 mb-6 hover:font-robotob hover:underline" href="">GAMING CAMPUS EN VIDEO ></a>
     </section>
 
     <section id="banner-blanche" class="flex justify-center items-center p-5">
@@ -42,7 +42,7 @@
     <section id="savoir-plus" class="bg-black text-white p-20 flex justify-center gap-5">
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
             <div class="img w-[60%]">
-                <img class="w-full" src="assets/img/logo-gbs-home.png" alt="">
+                <img class="w-full " src="assets/img/logo-gbs-home.png" alt="">
             </div>
             <h3><strong>GAMING BUSINESS SCHOOL</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
@@ -51,7 +51,7 @@
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
             <div class="img w-[60%]">
-                <img class="w-full" src="assets/img/logo-ga-home.png" alt="">
+                <img class="w-full " src="assets/img/logo-ga-home.png" alt="">
             </div>
             <h3><strong>GAMING ACADEMY</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
@@ -60,7 +60,7 @@
 
         <div class="savoir-container flex items-center gap-5 flex-col text-center">
             <div class="img w-[60%]">
-                <img class="w-full" src="assets/img/logo-gg-home.png" alt="">
+                <img class="w-full " src="assets/img/logo-gg-home.png" alt="">
             </div>
             <h3><strong>GAMING GURU</strong></h3>
             <p>Formez-vous dans la première école de management dédiée aux enjeux et métiers du jeu vidéo.</p>
@@ -80,7 +80,7 @@
         <div class="news-parent flex gap-20">
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
-                    <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
+                    <img class="w-full shadow-xl shadow-black " src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
@@ -89,7 +89,7 @@
 
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
-                    <img class="w-full shadow-xl shadow-black" src="assets/img/pgw18home.jpg" alt="">
+                    <img class="w-full shadow-xl shadow-black " src="assets/img/pgw18home.jpg" alt="">
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
@@ -98,7 +98,7 @@
 
             <div class="news flex flex-col gap-3">
                 <div class="img w-[100%]">
-                    <img class="w-full shadow-xl shadow-black" src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
+                    <img class="w-full shadow-xl shadow-black " src="assets/img/inauguration_gaming_campus_photo.jpg" alt="">
                 </div>
                 <h3 class="font-robotob text-md mt-3">Réunion d'information 19 décembre</h3>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deserunt molestias commodi harum porro nam reiciendis. Culpa, molestias suscipit! Soluta aspernatur velit pariatur architecto a! Iste error quisquam aut rem.</p>
@@ -111,7 +111,7 @@
         <div>
             <div class="info-parent1 flex justify-center pt-10 gap-28">
                 <div class="logo">
-                    <img src="assets/img/logo-gc-footer.jpg" alt="">
+                    <a href=""><img class="hover:border-b-4 hover:border-sky-500" src="assets/img/logo-gc-footer.jpg" alt=""></a>
                 </div>
                 <div class="pratique">
                     <h3 class="font-robotob text-md">INFOS PRATIQUES</h3>
